[package]
name = "spongefish-stark"
edition = "2021"
license = "Apache-2.0"
version = "1.0.0-rc1"

[workspace]

[features]
default = []
p3-baby-bear = [
    "dep:p3-baby-bear",
    "dep:p3-challenger",
    "dep:p3-commit",
    "dep:p3-dft",
    "dep:p3-fri",
    "dep:p3-merkle-tree",
    "dep:p3-symmetric",
    "dep:rand",
    "spongefish/p3-baby-bear",
]
p3-koala-bear = [
    "dep:p3-koala-bear",
    "dep:p3-challenger",
    "dep:p3-commit",
    "dep:p3-dft",
    "dep:p3-fri",
    "dep:p3-merkle-tree",
    "dep:p3-symmetric",
    "dep:rand",
    "spongefish/p3-koala-bear",
]
keccak = ["dep:keccak", "dep:p3-keccak-air", "p3-baby-bear"]

[dependencies]
p3-air = "^0.5.1"
p3-batch-stark = "^0.5.1"
p3-baby-bear = { version = "^0.5.1", optional = true }
p3-challenger = { version = "^0.5.1", optional = true }
p3-commit = { version = "^0.5.1", optional = true }
p3-dft = { version = "^0.5.1", optional = true }
p3-field = "^0.5.1"
p3-fri = { version = "^0.5.1", optional = true }
p3-keccak-air = { version = "^0.5.1", optional = true }
p3-koala-bear = { version = "^0.5.1", optional = true }
p3-lookup = "^0.5.1"
p3-matrix = "^0.5.1"
p3-merkle-tree = { version = "^0.5.1", optional = true }
p3-poseidon2-air = { version = "^0.5.1" }
p3-poseidon2 = "^0.5.1"
p3-symmetric = { version = "^0.5.1", optional = true }
p3-uni-stark = "^0.5.1"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = { version = "^0.10", optional = true }
keccak = { version = "^0.1.5", optional = true }
spongefish = { git = "https://github.com/arkworks-rs/spongefish" }
spongefish-circuit = { git = "https://github.com/arkworks-rs/spongefish" }
