[package]
name = "spongefish-stark"
author = "Michele Orrù"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace]

[features]
default = []
keccak = ["dep:keccak", "dep:p3-keccak-air"]

[dependencies]
p3-air = "^0.5.1"
p3-batch-stark = "^0.5.1"
p3-baby-bear = "^0.5.1"
p3-challenger = "^0.5.1"
p3-commit = "^0.5.1"
p3-dft = "^0.5.1"
p3-field = "^0.5.1"
p3-fri = "^0.5.1"
p3-keccak-air = { version = "^0.5.1", optional = true }
p3-koala-bear = "^0.5.1"
p3-lookup = "^0.5.1"
p3-matrix = "^0.5.1"
p3-merkle-tree = "^0.5.1"
p3-poseidon2-air = { version = "^0.5.1" }
p3-poseidon2 = "^0.5.1"
p3-symmetric = "^0.5.1"
p3-uni-stark = "^0.5.1"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = "^0.10"
keccak = { version = "^0.1.5", optional = true }
spongefish = { version = "0.5", features = ["p3-baby-bear", "p3-koala-bear"] }
spongefish-circuit = "0.5"
